# Project_WEB

./: .env  .env.example  README.md  pyproject.toml  requirements.txt  tree.py
web_project/: .env.example  README.md  __init__.py  celery.py  settings.py
web_project/apps/address_book/: views.py
web_project/apps/address_book/migrations/: 0001_initial.py  0002_delete_contact.py
web_project/apps/index/: models.py  tasks.py  views.py
web_project/apps/index/logs/: news_data.json
web_project/apps/index/migrations/: 0005_delete_file.py  0006_file.py
web_project/apps/notes/: forms.py  urls.py  views.py
web_project/apps/working_with_files/: admin.py  apps.py  forms.py  models.py  views.py
web_project/apps/working_with_files/migrations/: 0002_delete_file.py
web_project/static/css/: styles.css
web_project/templates/: base.html
web_project/templates/address_book/: index.html  upcoming_birthdays.html
web_project/templates/notes/: create_note.html  delete_note.html
web_project/templates/registration/: login.html  password_reset_done.html  register.html
web_project/templates/user/: password_reset_done.html  user_settings.html
web_project/templates/working_with_files/: index_files.html
web_project/web_project/: settings.py  urls.py
web_project/web_project/apps/address_book/: forms.py  models.py  urls.py  views.py
web_project/web_project/apps/index/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
web_project/web_project/apps/notes/: urls.py  views.py
web_project/web_project/templates/: base.html
(+48 files in other folders)
