[tool.poetry]
name = "web-project"
version = "1.0"
description = ""
authors = ["JustZereff <tapxyh1445@gmail.com>"]
license = "GoIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
environ = "^1.0"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
cloudinary = "^1.40.0"
django-cloudinary-storage = "^0.3.0"
bs4 = "^0.0.2"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
